# CPU-Simulation

./: README.md  _config.yml  conv.py  defaults.py  index.md  linalg.py  main.py  optimization.py  pyproject.toml  solver.py  system.py  test_boundaries.py  test_linalg.py  test_method.py  test_resolution.py  test_system.py  testing.py
