[tool.poetry]
name = "cpu-simulation"
version = "0.1.0"
description = ""
authors = ["KarimAED <karim.alaael-din@gmx.de>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.5.1"
numpy = "^1.22.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
